<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dont Pause!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ad_unit_id">"ca-app-pub-5038706716632727/8458526186"</string>
    <string name="ad_unit_id2">"ca-app-pub-5038706716632727/9892743389"</string>
    <string name="startToast">"Don't Pause has started"</string>
    <string name="stopToast">"Don't Pause has stopped"</string>
     <string name="disclaimer">Automatically restoring purchases is not currently supported by PayPal. If you have any issues or need to restore a purchase, please email Support@DontPause.me with your order number and I will restore it manually.</string>
    <string name="shareText">"Check out this app that has enhanced my Android music experience"</string>
    <string name="wstartToast">"Click below to start"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ticker_text">Dont Pause is monitoring your music...</string>
    <string name="customizations">"Customizations"</string>
    <string name="notification">"Notification"</string>
    <string name="disablenotif">"Disabling the notification may cause the service to be killed by your system if memory gets low"</string>
    <string name="notifdisabled">"Notification Disabled - the service can be killed by your task manager"</string>
    <string name="onlynotif">"Only Silence Notifications"</string>
    <string name="checktoenabletab">"Check to only silence the notification stream (Check if it is vibrating between songs)"</string>
    <string name="onlysilencingnotif">"Only silencing notifications, feel free to adjust your ringer"</string>
    <string name="defringer">"Default Ringer"</string>
    <string name="setringernormal">"Check to set the ringer to normal if you stop the service with music playing "</string>
    <string name="backtonormal">"Don't Pause will turn your ringer back to normal if you stop the service with music playing"</string>
    <string name="enhancements">"Enhancements"</string>
    <string name="startusb">"Start on USB"</string>
    <string name="willstartusb">"Check to start the service when a usb cable is connected"</string>
    <string name="willstartusb2">"Don't Pause will start the next time you connect a usb cable"</string>
    <string name="startbt">"Start on Bluetooth"</string>
    <string name="checkstartbt">"Check to start the service when a bluetooth device is connected"</string>
    <string name="willstartbt">"Don't Pause will start the next time you connect a bluetooth device"</string>
    <string name="bootstart">"Start on Boot"</string>
    <string name="checkbootstart">"Check to start the service when your device is turned on"</string>
    <string name="willbootstart">"Don't Pause will start on the next boot"</string>
    <string name="detheadphones">"Detect Headphones"</string>
    <string name="checkdetheadphones">"Check to start the service when your Headphones are connected"</string>
    <string name="willdetheadphones">"Don't Pause will start when you connect your headphones"</string>
    <string name="advertising">"Advertising"</string>
    <string name="checkadvertising">"This app is free because it's ad supported. If you don't want to see ads, turn them off here."</string>
    <string name="willadvertising">"Ads are disabled"</string>
    <string name="feedback">"Feedback"</string>
    <string name="leavereview">"Leave a review if you enjoy the app"</string>
    <!-- License checking status messages -->
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow the user access</string>
    <string name="allow">Allow the user access</string>
    <string name="application_error">Application error: %1$s</string>

    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from Android Market.</string>
    <string name="unlicensed_dialog_retry_body">Unable to validate license. Check to see if a network connection is available.</string>
    <string name="buy_button">Buy app</string>
    <string name="retry_button">Retry</string>
    <string name="quit_button">Exit</string>
    <string name="in_app_bill_error">Problem setting up in-app billing</string>
    <string name="purchase_error">Error purchasing: </string>
    <string name="error_verification">Error purchasing:Authenticity verification failed</string>
    <string name="thank_you">Thank you for supporting the developer!</string>
    <string name="error_consume">Error while consuming: </string>
    <string name="app_license">"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAsy3vjCpmsJwN37FR2lM5QxWWIrMgcvEUcUzCQOJq2W6jtsRC5njDX68kVDltm0EKeKzVw9HhhsNnfDccBvtz20o2fDOQq/uR7+0JOF0/pVTG3twG5AGZpKn++/ZE6/8JOVmcU2qkoUvL65QnezDmoe2Fr8k4YfRUQACqxg7IJtVoNKnesbo68jTvjL9F0mkJUj4+NNxBFb4lY3kQPqMi3XSe/j/p/IJ5uru/wbckdlGokqmv3bU46+9n/26MC5h4mqo+VueTBVM2qzhzSVy+5d/p5frByA7Ka8I180W1bWmGX8FXVK7J9veTYNMCW/Oz1GRP2Ji0rxrf96bJaaBE/QIDAQAB"</string>
    <string name="settings_activityTitle">Dont Pause Settings</string>
    <string name="settings_enableTitle">Enable</string>
    <string name="settings_header">Select app(s) that should trigger Dont Pause</string>
    <string name="title_activity_paypal">PaypalActivity</string>

</resources>
